Swap volume buttons when the screen is rotated by 90 or 180 degrees (2/2)  - picked from SlimBean Change-Id: Ie2166a4d50050e7a60933251bfc8cda97c42d419
Conflicts:
	res/values/strings.xml
	src/com/android/settings/SoundSettings.java

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -119,6 +119,11 @@
             android:summary="@string/volume_adjust_sounds_enable_summary"
             android:persistent="true" />
 
+    <CheckBoxPreference
+            android:key="swap_volume_buttons"
+            android:title="@string/swap_volume_buttons_title"
+            android:summary="@string/swap_volume_buttons_summary" />
+
     <ListPreference
             android:key="emergency_tone"
             android:title="@string/emergency_tone_title"
