Add Lock volume keys in silent mode [2/2] - picked from SlimBean
    Prevents silent mode from accidentally being unset by volume keys

    Forward ported from GB

    PS 2 : Reorder

    Change-Id: Ia86d191ac4db1e369fd3f9ac25644eb51feab67e

Conflicts:
	res/xml/sound_settings.xml
	src/com/android/settings/SoundSettings.java

Change-Id: I942b3c1204ab8b0042652e0b2d5a59dd15f21005

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -124,6 +124,12 @@
             android:title="@string/swap_volume_buttons_title"
             android:summary="@string/swap_volume_buttons_summary" />
 
+    <CheckBoxPreference
+            android:key="lock_volume_keys"
+            android:title="@string/sound_lock_volume_keys_title"
+            android:summary="@string/sound_lock_volume_keys_summary"
+            android:persistent="false" />
+
     <ListPreference
             android:key="emergency_tone"
             android:title="@string/emergency_tone_title"
