--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -121,6 +121,10 @@
         <item>5 minutes</item>
         <item>10 minutes</item>
         <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>2 hours</item>
+        <item>4 hours</item>
+        <item>8 hours</item>    
     </string-array>
 
     <!-- Do not translate. -->
@@ -143,7 +147,15 @@
         <item>600000</item>
         <!-- Do not translate. -->
         <item>1800000</item>
-    </string-array>
+        <!-- Do not translate. -->
+        <item>3600000</item>
+         <!-- Do not translate. -->
+        <item>7200000</item>
+         <!-- Do not translate. -->
+        <item>14400000</item>
+         <!-- Do not translate. -->
+        <item>28800000</item>
+   </string-array>
     
     <string-array name="entries_font_size">
         <item msgid="6490061470416867723">Small</item>
