--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -42,6 +42,15 @@
                 android:targetClass="com.android.settings.LightLevelsActivity" />
         </PreferenceScreen>
 
+        <ListPreference
+                android:key="auto_brightness_sensitivity"
+                android:title="@string/auto_brightness_sensitivity_title"
+                android:summary="@string/auto_brightness_sensitivity_summary"
+                android:persistent="false"
+                android:entries="@array/auto_brightness_sensitivity_entries"
+                android:entryValues="@array/auto_brightness_sensitivity_values" 
+                android:dependency="light_level_custom"/>
+
         <PreferenceScreen
                 android:key="wallpaper"
                 android:title="@string/wallpaper_settings_title"
