--- a/res/values-de/arrays.xml
+++ b/res/values-de/arrays.xml
@@ -57,7 +57,13 @@
     <item msgid="5663439580228932882">"2 Minuten"</item>
     <item msgid="49888496216106852">"5 Minuten"</item>
     <item msgid="9002737361305019353">"10 Minuten"</item>
-    <item msgid="4322676235684793329">"30 Minuten"</item>
+    <item msgid="4322676235684793329">"30 Minuten"</item>  
+  </string-array>
+  <string-array name="extended_lock_after_timeout_entries">
+    <item>1 Stunde</item>
+    <item>2 Stunden</item>
+    <item>4 Stunden</item>
+    <item>8 Stunden</item>    
   </string-array>
   <string-array name="entries_font_size">
     <item msgid="8166647333858618801">"Klein"</item>
