--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -120,11 +120,7 @@
         <item>2 minutes</item>
         <item>5 minutes</item>
         <item>10 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>2 hours</item>
-        <item>4 hours</item>
-        <item>8 hours</item>    
+        <item>30 minutes</item>  
     </string-array>
 
     <!-- Do not translate. -->
@@ -147,6 +143,19 @@
         <item>600000</item>
         <!-- Do not translate. -->
         <item>1800000</item>
+   </string-array>
+ 
+    <!-- Security settings.  The delay after screen is turned off until device locks. 
+         These are shown in a list dialog. -->
+    <string-array name="extended_lock_after_timeout_entries">
+        <item>1 hour</item>
+        <item>2 hours</item>
+        <item>4 hours</item>
+        <item>8 hours</item>    
+    </string-array>
+
+    <!-- Do not translate. -->
+    <string-array name="extended_lock_after_timeout_values" translatable="false">
         <!-- Do not translate. -->
         <item>3600000</item>
          <!-- Do not translate. -->
@@ -156,7 +165,7 @@
          <!-- Do not translate. -->
         <item>28800000</item>
    </string-array>
-    
+ 
     <string-array name="entries_font_size">
         <item msgid="6490061470416867723">Small</item>
         <item msgid="3579015730662088893">Normal</item>
