custom button brightness control (2/3)
Change-Id: I5fa2b4e7e42ac1197f7a10386ec8c91bb3a46d0c

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -31,4 +31,7 @@
 
 	<!-- does the button brightness values only support 0/1 or real brightness values --> 
 	<bool name="button_brightness_state_only">false</bool>
+	
+	<!-- custom button brightness control for manual mode -->
+    <bool name="button_brightness_custom_value">false</bool>
 </resources>
