profiles: call it silent instead of mute
Change-Id: I2e55061fab64b75af990982b5e6dc3d4f5a70e6f

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1151,7 +1151,7 @@
     <string-array name="silent_mode_entries">
         <item>Off</item>
         <item>Vibrate</item>
-        <item>Mute</item>
+        <item>Silent</item>
     </string-array>
 
     <!-- Values for Silent mode. Do not translate. -->
