--- a/res/xml/settings_headers.xml
+++ b/res/xml/settings_headers.xml
@@ -76,6 +76,7 @@
             android:icon="@drawable/ic_settings_darkui"
             android:title="@string/trds_settings_title" />
 
+    <!-- ThemeChooser -->
     <header android:id="@+id/themes"
             android:title="@string/themes_title"
             android:icon="@drawable/ic_settings_themes" >
@@ -90,7 +91,8 @@
         android:id="@+id/launcher_settings"
         android:title="@string/launcher_settings_title"
         android:icon="@drawable/ic_settings_cmlauncher" />
-
+    
+    <!-- Device Settings -->
     <header android:id="@+id/advanced_settings"
             android:title="@string/advanced_settings_title"
             android:icon="@drawable/ic_settings_advanced">
@@ -99,6 +101,17 @@
                 android:targetPackage="com.cyanogenmod.settings.device"
                 android:targetClass="com.cyanogenmod.settings.device.DeviceSettings" />
     </header>
+
+    <!-- USSD Dialer -->
+    <header android:id="@+id/ussd_dialer"
+            android:title="@string/ussd_dialer_title"
+            android:icon="@drawable/ic_settings_ussd_dialer">
+        <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.dialer"
+                android:targetClass="com.android.dialer.DialtactsActivity" />
+    </header>
+
 
     <header android:id="@+id/sprint_tools"
             android:title="@string/sprint_tools_title"
